css/utilities.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Times New Roman", Times, serif;
}

.lock-scroll {
  overflow: hidden;
}
body {
  background-color: #1e1e1e;
  overflow-x: hidden;
}
.navbar {
  display: grid;
  height: 100px;
  position: relative;
  z-index: 100;
  background-color: #1e1e1e;
}

.navbar__container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 90%;
  justify-self: center;
}
.navbar__logo__container {
  width: 100px;
  z-index: 10;
}

.navbar__logo__container img {
  width: 100%;
}

.navbar__links__container {
  display: flex;
  gap: 2rem;
  list-style: none;
}

.navbar__links a {
  color: white;
  text-decoration: none;
}

.navbar__mobile__menu {
  display: none;
  cursor: pointer;
}
.footer {
  display: flex;
  gap: 2rem;
  justify-content: center;
  align-items: center;
  height: 100px;
}
.footer__logo__container {
  width: 70px;
}
.footer__logo__container img {
  width: 100%;
}
.footer__copyright {
  color: white;
}
.footer__contact__btn {
  padding: 10px 20px;
  background-color: black;
  border: none;
  border-radius: 10px;
  text-decoration: none;
}
.footer__contact__btn p {
  color: white;
}

@media screen and (max-width: 900px) {
  .navbar__mobile__menu {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
  }
  .navbar__mobile__menu span {
    background-color: white;
    width: 36px;
    height: 4px;
    transition: all 0.2s;
  }
  .navbar__links__container {
    position: absolute;
    top: -1000px;
  }
  .navbar__mobile__menu.active .bar:nth-child(1) {
    transform: translateY(11px) rotate(45deg);
  }
  .navbar__mobile__menu.active .bar:nth-child(3) {
    transform: translateY(-10px) rotate(-45deg);
  }
  .navbar__mobile__menu.active .bar:nth-child(2) {
    opacity: 0;
  }

  .navbar__links__container.active {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 3rem;
    top: 0;
    left: 0;
    background-color: #1e1e1e;
    height: 100vh;
    width: 100vw;
    margin: 0;
  }
}

@media screen and (max-width: 450px) {
  .navbar__links {
    font-size: 2rem;
  }
  .navbar,
  .footer {
    height: 80px;
  }
}

@media screen and (max-width: 400px) {
  .navbar__links {
    font-size: 1.6rem;
  }
  .footer {
    gap: 1.5rem;
  }
  .footer__contact__btn p {
    font-size: 0.6rem;
  }
  .footer__copyright {
    font-size: 0.6rem;
  }

  .footer__logo__container {
    width: 50px;
  }
}

